# nfbv

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  bmp.c  config.h  configure  configure.in  configure.sh  fb_display.c  fb_display.h  fb_dsp.c  fbv.1  fbv.h  gif.c  jpeg.c  main.c  mkrelease  png.c  resize.c
