dnl Process this file with autoconf to produce a configure script.
AC_INIT(fb_display.c)

AM_INIT_AUTOMAKE(fbv, 0.94a)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -ljpeg:
AC_CHECK_LIB(jpeg, main)
dnl Replace `main' with a function in -lpng:
AC_CHECK_LIB(png, main)
dnl Replace `main' with a function in -lungif:
AC_CHECK_LIB(ungif, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_MAJOR
AC_CHECK_HEADERS(fcntl.h strings.h sys/file.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_ST_BLKSIZE
AC_HEADER_TIME
AC_C_INLINE

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(select strerror)

AC_OUTPUT(Makefile)
